Minor spacing fixed for radio and checkbox inputs

--- a/src/styles/Dialogs.scss
+++ b/src/styles/Dialogs.scss
@@ -157,15 +157,14 @@ p:not(:last-child) {
 }
 
 input[type="checkbox"] {
-     //margin-right: 5px;
-     //vertical-align: middle;
+     margin-right: 5px;
      width: 14px;
      height: 12.5px;
      zoom: 1.3;
 }
 
 input[type="radio"] {
-    margin-right: 3px;
+    margin-right: 5px;
     vertical-align: 1px;
 }
 
